# dead-lang

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: argv.dl  array.dl  comments.dl  else.dl  enum.dl  error.dl  factorial.dl  fibonacci.dl  for.dl  gol.dl  greetings.dl  import.dl  include.dl  match.dl  nested_for.dl  newlines.dl  pointers.dl  preincrement.dl  print.dl  run_all.sh  sorting.dl  struct.dl  test.dl  throws.dl  void.dl
include/dtlib/: argparse.h  config.h  print.h
include/dtsutil/: filesystem.hpp  iterator.hpp  process.hpp  string.hpp
include/fmt/: core.h
src/: CMakeLists.txt  Environment.cpp  Environment.hpp  Error.cpp  Error.hpp  Expression.cpp  Expression.hpp  Iterator.hpp  Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  Position.cpp  Position.hpp  Statement.cpp  Statement.hpp  Supervisor.cpp  Supervisor.hpp  Token.cpp  Token.hpp  Typechecker.cpp  Typechecker.hpp  main.cpp  parser.cpp  parser.hpp
src/util/: str.cpp  str.hpp  sv.cpp  sv.hpp
src/vm/: exceptions.cpp  exceptions.hpp  instructions.cpp  instructions.hpp  parser.cpp  parser.hpp  stack.cpp  stack.hpp  vm.cpp  vm.hpp
